# charmie_ws

./: .gitignore  .gitmodules  LICENSE.md  README.md  frames_2025-01-15_23.52.45.gv  frames_2025-01-15_23.54.44.gv  mobileclip_blt.ts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
Log/: OrbbecSDK.log.txt
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
rosbags/amcl_covariance2/: metadata.yaml
rosbags/erro_acos/: erro_acos_0.db3  metadata.yaml
rosbags/lidar_teste_TR/: lidar_teste_TR_0.db3  metadata.yaml
rosbags/nav_first_test_w_obs_and_odom/: metadata.yaml  nav_first_test_w_obs_and_odom_0.db3
rosbags/nav_states1/: metadata.yaml  nav_states1_0.db3
rosbags/nav_states2/: metadata.yaml
rosbags/nav_states3/: metadata.yaml
rosbags/navigation_1Julho/: metadata.yaml
rosbags/navigation_amcl_teste_posicoes/: metadata.yaml
rosbags/navigation_amcl_teste_posicoes3/: metadata.yaml
rosbags/navigation_amcl_teste_posicoes_fora_eixo/: metadata.yaml
rosbags/odometry_safety_test/: metadata.yaml  odometry_safety_test_0.db3
rosbags/rosbag2_2023_06_22-19_33_19/: metadata.yaml  rosbag2_2023_06_22-19_33_19_0.db3
rosbags/start_door_1/: metadata.yaml  start_door_1_0.db3
rosbags/start_door_2/: metadata.yaml  start_door_2_0.db3
rosbags/teste_novas_coords/: metadata.yaml  teste_novas_coords_0.db3
rosbags/teste_novas_coords2/: metadata.yaml  teste_novas_coords2_0.db3
rosbags/testes_especificos/: metadata.yaml  testes_especificos_0.db3
src/: README.md  charmie_color_yp.raw  charmie_color_yp_180.raw  charmie_color_yp_190.raw
src/charmie_arm_ufactory/: README.md
src/charmie_audio/: package.xml  setup.cfg  setup.py
src/charmie_bot/: CMakeLists.txt  README.md
src/charmie_camera_realsense/: package.xml  setup.cfg  setup.py
src/charmie_carry_luggage/: package.xml  setup.cfg  setup.py
src/charmie_clean_table/: package.xml  setup.cfg  setup.py
src/charmie_debug/: package.xml  setup.cfg  setup.py
src/charmie_debug_visual/: setup.cfg  setup.py
src/charmie_demonstration/: package.xml  setup.cfg  setup.py
src/charmie_description/: CMakeLists.txt  package.xml
src/charmie_diagnostics/: setup.cfg  setup.py
src/charmie_door_start/: package.xml  setup.cfg  setup.py
src/charmie_face/: package.xml  setup.cfg  setup.py
src/charmie_face_shiningrgb/: setup.cfg  setup.py
src/charmie_gamepad/: CMakeLists.txt  package.xml
src/charmie_gamepad/config/: logitech.config.yaml  ps4.config.yaml  xbox.config.yaml
src/charmie_gamepad/include/charmie_gamepad/: charmie_gamepad.hpp  sdl_utils.hpp
src/charmie_gamepad/launch/: gamepad_launch.py
src/charmie_gamepad/src/: charmie_gamepad.cpp  charmie_gamepad_node.cpp  sdl_utils.cpp
src/charmie_gpsr/: package.xml  setup.cfg  setup.py
src/charmie_gui/: package.xml  setup.cfg  setup.py
src/charmie_inspection/: package.xml  setup.cfg  setup.py
src/charmie_interfaces/: CMakeLists.txt  package.xml
src/charmie_interfaces/action/: AdjustNavigationAngle.action  AdjustNavigationObstacles.action  AdjustNavigationOmnidirectional.action  CountUntil.action  NavigateSDNL.action
src/charmie_interfaces/msg/: ArmController.msg  BoundingBox.msg  BoundingBoxAndPoints.msg  ButtonsLowLevel.msg  DetectedObject.msg  DetectedPerson.msg  Encoders.msg  ErrorsMotorBoard.msg  GamepadController.msg  Keypoints.msg  ListOfDetectedObject.msg  ListOfDetectedPerson.msg  ListOfFloats.msg  ListOfImages.msg  ListOfMaskDetections.msg  ListOfPoints.msg  ListOfStrings.msg  MaskDetection.msg  MultiObjects.msg  NavAdjustAngle.srv  NavAdjustObstacle.srv  NavAdjustOmni.msg  NeckPosition.msg  ObstacleInfo.msg  Obstacles.msg  PS4Controller.msg  PointCloudCoordinates.msg  RGB.msg  RadarData.msg  RadarSector.msg  RequestPointCloud.msg  RetrievePointCloud.msg  SDNLDebug.msg  SDNLMarkerDebug.msg  SearchForPerson.msg  SpeechType.msg  SuccessMessage.msg  TarNavSDNL.msg  TaskStatesInfo.msg  TorsoPosition.msg  (+6 more)
src/charmie_interfaces/srv/: ActivateBool.srv  ActivateObstacles.srv  ActivateTracking.srv  ActivateYoloObjects.srv  ActivateYoloPose.srv  ActivateYoloWorld.srv  CalibrateAudio.srv  ContinuousGetAudio.srv  FirstTRService.srv  GetAudio.srv  GetFaceTouchscreenMenu.srv  GetLLMDemo.srv  GetLLMGPSR.srv  GetLLMResponse.srv  GetLowLevelButtons.srv  GetMinRadarDistance.srv  GetNeckPosition.srv  GetPointCloud.srv  GetPointCloudMask.srv  GetSoundClassification.srv  GetSoundClassificationContinuous.srv  GetTorso.srv  GetVCCs.srv  NamedTarget.srv  NavTrigger.srv  NodesUsed.srv  SaveSpeechCommand.srv  SetAcceleration.srv  SetFace.srv  SetFaceTouchscreenMenu.srv  SetFloat.srv  SetInt.srv  SetJointTarget.srv  SetNeckCoordinates.srv  SetNeckPosition.srv  SetPoseTarget.srv  SetPoseWithCovarianceStamped.srv  SetRGB.srv  SetSimpleMoveTool.srv  SetString.srv  (+7 more)
src/charmie_lidar_hokuyo/: package.xml  setup.cfg  setup.py
src/charmie_llm/: README.md  package.xml  setup.cfg  setup.py
src/charmie_localisation/: package.xml  setup.cfg  setup.py
src/charmie_low_level/: package.xml  setup.cfg  setup.py
src/charmie_moveit/charmie_commander_cpp/: CMakeLists.txt  package.xml
src/charmie_moveit/charmie_commander_cpp/src/: commander_template.cpp  moveit_commander.cpp  test_avoid_obstacle.cpp  test_moveit.cpp  test_pick_and_place_moveit.cpp
src/charmie_moveit_config/: .setup_assistant
src/charmie_navigation/: package.xml  setup.cfg  setup.py
src/charmie_navigation_sdnl/: package.xml  setup.cfg  setup.py
src/charmie_neck_dynamixel/: setup.cfg  (+2 more)
src/charmie_radar/: CMakeLists.txt  package.xml
src/charmie_radar/launch/: radar_launch.py
src/charmie_radar/src/: charmie_radar.cpp  radar.cpp
src/charmie_sdnl_nav/: CMakeLists.txt  package.xml
src/charmie_sdnl_nav/include/charmie_sdnl_nav/: angle_utils.hpp  debug_builder.hpp  sdnl_core.hpp  sdnl_nav_node.hpp
src/charmie_sdnl_nav/launch/: gazebo_sdnl_launch.py  sdnl_nav_launch.py  sdnl_nav_sim_launch.py  sdnl_with_just_odom_localization_launch.py
src/charmie_sdnl_nav/src/: debug_builder.cpp  main.cpp  sdnl_core.cpp  sdnl_nav.cpp  sdnl_nav_node.cpp
teste_dataset/: metadata.yaml
(+3094 files in other folders)
