<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charmie_gamepad</name>
  <version>0.1.0</version>
  <description>Custom teleop gamepad controller for CHARMIE with YAML-based configuration and multiple twist outputs.</description>
  <maintainer email="tiagoribeiro80@gmail.com">Tiago Ribeiro</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>charmie_interfaces</depend>
  <depend>joy</depend>
  <depend>libsdl2-dev</depend>

  <!-- For launching and configs -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Testing (optional but good practice) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components/>
  </export>
</package>
